# solu-claude

./: .env.example  .gitignore  CLAUDE.md  LICENSE.txt  README.md  SECURITY_REVIEW.md  add_test_data.py  fix_floorplan.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
.claude/: settings.local.json
app/: __init__.py  auth_routes.py  models.py  routes.py
app/static/css/: admin.css  style.css
app/static/floorplans/: .gitignore
app/static/js/: admin.js  app.js
app/templates/: admin.html  base.html  change_password.html  index.html  login.html  manage_users.html
migrations/: alembic.ini
migrations/versions/: 202511221954_add_password_must_change_field_to_user_.py  202511222100_add_resource_type_specific_metadata_.py  70fee9070bbb_convert_to_office_resource_locator_with_.py
tests/: __init__.py  conftest.py  test_auth_routes.py  test_models.py  test_routes.py  test_security.py
