[project]
name = "office-resource-locator"
version = "0.1.0"
description = "A Flask web application for locating office resources on interactive floorplans"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-flask>=1.3.0",
    "ruff>=0.14.6",
]

[tool.ruff]
# Ruff configuration
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
# Black configuration
line-length = 100
target-version = ["py314"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | migrations
)/
'''

[tool.mypy]
# Mypy configuration
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "flask_sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flask_migrate.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flask_wtf.*"
ignore_missing_imports = true
